--- a/src/firstmodal.html
+++ b/src/firstmodal.html
@@ -38,66 +38,67 @@
 
     </section>
 
-    <section class="wrapper-foother">
+   
+        <div class="heading">
+            <h2>Помощь проекту</h2>
+        </div>
 
-
-        <article class="help-card" id="help">
-            <div class="help-card__inner">
-                <div class="help-card__title">
-                    <div class="help-card__title-item">Помогите проекту</div>
-                </div>
+        <article class="help-card" id="help"> 
                 <div class="help-card__content">
-                    <form class="help-form" id="payForm" action="/payments/confirm" accept-charset="UTF-8"
-                        method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden"
-                            name="authenticity_token"
-                            value="RXDwSwphWmJSKvvk+LWfeb7rnbOyPmgAJKBAdrK53i08npRUi4EpVy/D0cQ5x9ykIJuWBCSc8098ILA7LEKzrA=="><input
-                            name="project_id" type="hidden" value="11606326"><input id="sumHiddenInput" name="amount"
-                            type="hidden"><input name="analytics" type="hidden"
-                            value="{&quot;google_analytics_client_id&quot;:&quot;703640297.1595432119&quot;,&quot;referer&quot;:&quot;https://imenamag.by/posts/bezdomnyi-artem?&quot;,&quot;utm_content&quot;:null,&quot;utm_medium&quot;:null,&quot;utm_source&quot;:null,&quot;utm_campaign&quot;:null}">
+                    <form class="help-form" id="payForm" action="" accept-charset="UTF-8" method="post">
+                        <input type="hidden" value="">
+                        <input type="hidden" name="" value="">
+                            <input name="" type="hidden" value="">
+                            <input id="" name="" type="hidden">
+                            <input name="" type="hidden">
                         <div class="help-form__row">
                             <div class="help-form__list">
                                 <div class="help-form__list-item">
-                                    <div class="help-form__radio"><input class="help-form__radio-input" id="input3"
-                                            name="radio_sum" type="radio" value="3"><label
-                                            class="help-form__radio-label" for="input3">3&nbsp;руб.</label></div>
+                                    <div class="help-form__radio">
+                                        <input class="help-form__radio-input" id=""  type="radio" value="3">
+                                            <label class="help-form__radio-label">3&nbsp;руб.</label>
+                                    </div>
                                 </div>
                                 <div class="help-form__list-item">
                                     <div class="help-form__radio"><input class="help-form__radio-input" id="input5"
                                             name="radio_sum" type="radio" value="5"><label
-                                            class="help-form__radio-label" for="input5">5&nbsp;руб.</label></div>
+                                            class="help-form__radio-label" for="input5">5&nbsp;руб.</label>
+                                    </div>
                                 </div>
                                 <div class="help-form__list-item">
                                     <div class="help-form__radio"><input checked="" class="help-form__radio-input"
                                             id="input10" name="radio_sum" type="radio" value="10"><label
-                                            class="help-form__radio-label" for="input10">10&nbsp;руб.</label></div>
+                                            class="help-form__radio-label" for="input10">10&nbsp;руб.</label>
+                                    </div>
                                 </div>
                                 <div class="help-form__list-item">
                                     <div class="help-form__radio"><input class="help-form__radio-input" id="input20"
                                             name="radio_sum" type="radio" value="20"><label
-                                            class="help-form__radio-label" for="input20">20&nbsp;руб.</label></div>
+                                            class="help-form__radio-label" for="input20">20&nbsp;руб.</label>
+                                    </div>
                                 </div>
                                 <div class="help-form__list-item">
                                     <div class="help-form__radio"><input class="help-form__radio-input" id="input50"
                                             name="radio_sum" type="radio" value="50"><label
-                                            class="help-form__radio-label" for="input50">50&nbsp;руб.</label></div>
+                                            class="help-form__radio-label" for="input50">50&nbsp;руб.</label>
+                                    </div>
                                 </div>
                                 <div class="help-form__list-item">
                                     <div class="help-form__radio"><input class="help-form__radio-input" id="input100"
                                             name="radio_sum" type="radio" value="100"><label
-                                            class="help-form__radio-label" for="input100">100&nbsp;руб.</label></div>
+                                            class="help-form__radio-label" for="input100">100&nbsp;руб.</label>
+                                    </div>
                                 </div>
                                 <div class="help-form__list-item">
                                     <div class="help-form__radio"><input class="help-form__radio-input" id="input200"
                                             name="radio_sum" type="radio" value="200"><label
-                                            class="help-form__radio-label" for="input200">200&nbsp;руб.</label></div>
-                                </div><label class="help-form__list-item"><input class="help-form__input" id="sumInput"
-                                        name="text_sum" placeholder="Другая сумма" type="tel"></label>
-                            </div>
-                        </div>
-                        <div class="help-form__errors">
-                            <div class="help-form__error">
-                                <div class="help-form__error-inner"></div>
-                            </div>
+                                            class="help-form__radio-label" for="input200">200&nbsp;руб.</label>
+                                    </div>
+                                </div>
+                                <!-- <label class="help-form__list-item">
+                                    <input class="help-form__input" id=""
+                                        name="" placeholder="Другая сумма" type="tel"></label>
+                            </div> -->
                         </div>
                         <div class="help-form__row help-form__row_bottom-medium">
                             <div class="help-form__input-group">
@@ -110,7 +111,7 @@
                         </div>
         </article>
 
-
+        <section class="wrapper-foother">
 
 
         <div class="foother-content">
