feat: merge accordion is finished

--- a/src/index.html
+++ b/src/index.html
@@ -381,23 +381,25 @@
     <div class="heading-event">
       <h2>Ближайшие события</h2>
     </div>
-
     <!-- аккордеон -->
-
-    <div class="accordion" id="accordion">
-      <div class="accordion-item">
+    <ul class="accordion" id="accordion">
+      <li class="accordion-item">
         <div class="acc-banner" id="headOne">
           <span> Банк и деньги (часть 1)</span>
           <span class="data">12 января</span>
           <span>11:00</span>
-          <button class="toggle" data-toggle="collapse" data-target="#contentOne" aria-expanded="true" aria-controls="contentOne">
+          <button class="toggle" data-toggle="collapse"
+                  data-target="#contentOne" aria-expanded="true"
+                  aria-controls="contentOne">
             Подробнее
           </button>
         </div>
-        <div class="acc-content-container collapse" id="contentOne" aria-labelledby="headOne" data-parent="#accordion">
+        <div class="acc-content-container collapse" id="contentOne"
+             aria-labelledby="headOne" data-parent="#accordion">
           <div class="acc-content">
             <p class="acc-tit">Место проведения:</p>
-            <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п. Руденск.</p>
+            <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п.
+              Руденск.</p>
             <p class="acc-tit">Целевая аудитория:</p>
             <p class="acc-text">9, 10, 12 класс (42 человека)</p>
             <p class="acc-tit"> Цель занятия:</p>
@@ -420,152 +422,109 @@
               рядом». Проверка полученных
               знаний в конце занятия — тест по пройденному материалу.
             </p>
-            <button class="toggle" data-toggle="collapse" data-target="#contentOne" aria-expanded="true" aria-controls="contentOne">
+            <button class="toggle" data-toggle="collapse"
+                    data-target="#contentOne" aria-expanded="true"
+                    aria-controls="contentOne">
               <img src="./images/сlose.png">
             </button>
           </div>
         </div>
-      </div>
-      <div class="accordion-item">
-        <div class="acc-banner" id="headTwo">
-          <span> Банк и деньги (часть 1)</span><span
-          class="data">12 января</span><span>11:00</span>
-          <button class="toggle" data-toggle="collapse"
-                  data-target="#contentTwo" aria-expanded="true"
-                  aria-controls="contentTwo"> Подробнее
-          </button>
-        </div>
-        <div class="acc-content-container collapse" id="contentTwo"
-             aria-labelledby="headTwo" data-parent="#accordion">
-          <div class="acc-content">
-            <p class="acc-tit">Место проведения:</p>
-            <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п.
-              Руденск.</p>
-            <p class="acc-tit">Целевая аудитория:</p>
-            <p class="acc-text">9, 10, 12 класс (42 человека)</p>
-            <p class="acc-tit"> Цель занятия:</p>
-            <p class="acc-text">
-              Формирование основ финансовой грамотности у детей-сирот с
-              интеллектуальной
-              недостаточностью.
-            </p>
-            <p class="acc-tit"> Задачи:</p>
-            <p class="acc-text">
-              Познакомить детей с понятиями «деньги», «купюра», «монеты»,
-              «банк», «бюджет», «расходы»,
-              «доходы»; объяснить необходимость и возможность покупки того или
-              иного товара; воспитать правильное
-              отношение к деньгам.
-            </p>
-            <p class="acc-description"> ОПИСАНИЕ:</p>
-            <p class="acc-text">
-              Теоретическая часть — презентация, подготовленная командой «Мы
-              рядом». Проверка полученных
-              знаний в конце занятия — тест по пройденному материалу.
-            </p>
-            <button class="toggle" data-toggle="collapse"
-                    data-target="#contentTwo" aria-expanded="true"
-                    aria-controls="contentTwo"><img src="images/сlose.png">
-            </button>
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <div class="acc-banner" id="headTree">
-          <span> Банк и деньги (часть 1)</span><span
-          class="data">12 января</span><span>11:00</span>
-          <button class="toggle" data-toggle="collapse"
-                  data-target="#contentThree" aria-expanded="true"
-                  aria-controls="contentThree"> Подробнее
-          </button>
-        </div>
-        <div class="acc-content-container collapse" id="contentThree"
-             aria-labelledby="headTree" data-parent="#accordion">
-          <div class="acc-content">
-            <p class="acc-tit">Место проведения:</p>
-            <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п.
-              Руденск.</p>
-            <p class="acc-tit">Целевая аудитория:</p>
-            <p class="acc-text">9, 10, 12 класс (42 человека)</p>
-            <p class="acc-tit"> Цель занятия:</p>
-            <p class="acc-text">
-              Формирование основ финансовой грамотности у детей-сирот с
-              интеллектуальной
-              недостаточностью.
-            </p>
-            <p class="acc-tit"> Задачи:</p>
-            <p class="acc-text">
-              Познакомить детей с понятиями «деньги», «купюра», «монеты»,
-              «банк», «бюджет», «расходы»,
-              «доходы»; объяснить необходимость и возможность покупки того или
-              иного товара; воспитать правильное
-              отношение к деньгам.
-            </p>
-            <p class="acc-description"> ОПИСАНИЕ:</p>
-            <p class="acc-text">
-              Теоретическая часть — презентация, подготовленная командой «Мы
-              рядом». Проверка полученных
-              знаний в конце занятия — тест по пройденному материалу.
-            </p>
-            <button class="toggle" data-toggle="collapse"
-                    data-target="#contentThree" aria-expanded="true"
-                    aria-controls="contentThree"><img src="images/сlose.png">
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="event-link">
-      <a href="event.html">Смотреть все</a>
-    </div>
+      </li>
+      <li class="accordion-item">
+       <div class="acc-banner" id="headTwo">
+         <span> Банк и деньги (часть 1)</span><span
+         class="data">12 января</span><span>11:00</span>
+         <button class="toggle" data-toggle="collapse"
+                 data-target="#contentTwo" aria-expanded="true"
+                 aria-controls="contentTwo"> Подробнее
+         </button>
+       </div>
+       <div class="acc-content-container collapse" id="contentTwo"
+            aria-labelledby="headTwo" data-parent="#accordion">
+         <div class="acc-content">
+           <p class="acc-tit">Место проведения:</p>
+           <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п.
+             Руденск.</p>
+           <p class="acc-tit">Целевая аудитория:</p>
+           <p class="acc-text">9, 10, 12 класс (42 человека)</p>
+           <p class="acc-tit"> Цель занятия:</p>
+           <p class="acc-text">
+             Формирование основ финансовой грамотности у детей-сирот с
+             интеллектуальной
+             недостаточностью.
+           </p>
+           <p class="acc-tit"> Задачи:</p>
+           <p class="acc-text">
+             Познакомить детей с понятиями «деньги», «купюра», «монеты»,
+             «банк», «бюджет», «расходы»,
+             «доходы»; объяснить необходимость и возможность покупки того или
+             иного товара; воспитать правильное
+             отношение к деньгам.
+           </p>
+           <p class="acc-description"> ОПИСАНИЕ:</p>
+           <p class="acc-text">
+             Теоретическая часть — презентация, подготовленная командой «Мы
+             рядом». Проверка полученных
+             знаний в конце занятия — тест по пройденному материалу.
+           </p>
+           <button class="toggle" data-toggle="collapse"
+                   data-target="#contentTwo" aria-expanded="true"
+                   aria-controls="contentTwo"><img src="images/сlose.png">
+           </button>
+         </div>
+       </div>
+      </li>
+      <li class="accordion-item">
+       <div class="acc-banner" id="headTree">
+         <span> Банк и деньги (часть 1)</span><span
+         class="data">12 января</span><span>11:00</span>
+         <button class="toggle" data-toggle="collapse"
+                 data-target="#contentThree" aria-expanded="true"
+                 aria-controls="contentThree"> Подробнее
+         </button>
+       </div>
+       <div class="acc-content-container collapse" id="contentThree"
+            aria-labelledby="headTree" data-parent="#accordion">
+         <div class="acc-content">
+           <p class="acc-tit">Место проведения:</p>
+           <p class="acc-text">«Руденская вспомогательная школа-интернат», г.п.
+             Руденск.</p>
+           <p class="acc-tit">Целевая аудитория:</p>
+           <p class="acc-text">9, 10, 12 класс (42 человека)</p>
+           <p class="acc-tit"> Цель занятия:</p>
+           <p class="acc-text">
+             Формирование основ финансовой грамотности у детей-сирот с
+             интеллектуальной
+             недостаточностью.
+           </p>
+           <p class="acc-tit"> Задачи:</p>
+           <p class="acc-text">
+             Познакомить детей с понятиями «деньги», «купюра», «монеты»,
+             «банк», «бюджет», «расходы»,
+             «доходы»; объяснить необходимость и возможность покупки того или
+             иного товара; воспитать правильное
+             отношение к деньгам.
+           </p>
+           <p class="acc-description"> ОПИСАНИЕ:</p>
+           <p class="acc-text">
+             Теоретическая часть — презентация, подготовленная командой «Мы
+             рядом». Проверка полученных
+             знаний в конце занятия — тест по пройденному материалу.
+           </p>
+           <button class="toggle" data-toggle="collapse"
+                   data-target="#contentThree" aria-expanded="true"
+                   aria-controls="contentThree"><img src="images/сlose.png">
+           </button>
+         </div>
+       </div>
+      </li>
+    </ul>
+  </div>
+  <div class="event-link">
+    <a href="event.html">Смотреть все</a>
   </div>
 </section>
 
-<div id="accordion">
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <h5 class="mb-0">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Collapsible Group Item #1
-        </button>
-      </h5>
-    </div>
-
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingTwo">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Collapsible Group Item #2
-        </button>
-      </h5>
-    </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingThree">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Collapsible Group Item #3
-        </button>
-      </h5>
-    </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-      <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
-    </div>
-  </div>
-</div>
 <!-- новости instagram -->
 <section class="wrapper-news">
   <div class="heading-second">
