--- a/src/event.html
+++ b/src/event.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+    <title>Шаг вперед</title>
 </head>
 <body>
     <section class="wrapper-header">
         <header>
-          <div class="container flat-menu">
+          <div class="container_flat-menu">
             <div class="first-logo">
               <img src="./images/logo-2.png" alt="Logo">
             </div>
@@ -75,7 +76,7 @@
               <div class="acc-banner" id="eventsHeadOne">
                 <span> Банк и деньги (часть 1)</span>
                 <span class="data">12 января</span>
-                <span>11:00</span>
+                <span class="time">11:00</span>
                 <button class="toggle" data-toggle="collapse" data-target="#eventsContentOne" aria-expanded="true" aria-controls="eventsContentOne">
                   Подробнее
                 </button>
@@ -117,7 +118,7 @@
               <div class="acc-banner" id="eventseventsHeadTwo">
                 <span> Банк и деньги (часть 1)</span>
                 <span class="data">12 января</span>
-                <span>11:00</span>
+                <span class="time">11:00</span>
                 <button class="toggle" data-toggle="collapse" data-target="#eventsContentTwo" aria-expanded="true" aria-controls="eventsContentTwo">
                   Подробнее
                 </button>
@@ -159,7 +160,7 @@
               <div class="acc-banner" id="eventsHeadThree">
                 <span> Банк и деньги (часть 1)</span>
                 <span class="data">12 января</span>
-                <span>11:00</span>
+                <span class="time">11:00</span>
                 <button class="toggle" data-toggle="collapse" data-target="#eventsContentThree" aria-expanded="true" aria-controls="eventsContentThree">
                   Подробнее
                 </button>
@@ -200,7 +201,7 @@
             <li class="accordion-item">
               <div class="acc-banner" id="eventHeadFour">
                 <span> Банк и деньги (часть 1)</span><span
-                class="data">12 января</span><span>11:00</span>
+                class="data">12 января</span><span class="time">11:00</span>
                 <button class="toggle" data-toggle="collapse"
                         data-target="#eventContentFour" aria-expanded="true"
                         aria-controls="eventContentFour"> Подробнее
@@ -244,7 +245,7 @@
             <li class="accordion-item">
               <div class="acc-banner" id="eventHeadFive">
                 <span> Банк и деньги (часть 1)</span><span
-                class="data">12 января</span><span>11:00</span>
+                class="data">12 января</span><span class="time">11:00</span>
                 <button class="toggle" data-toggle="collapse"
                         data-target="#eventContentFive" aria-expanded="true"
                         aria-controls="eventContentFive"> Подробнее
@@ -288,7 +289,7 @@
             <li class="accordion-item">
               <div class="acc-banner" id="eventHeadSix">
                 <span> Банк и деньги (часть 1)</span><span
-                class="data">12 января</span><span>11:00</span>
+                class="data">12 января</span><span class="time">11:00</span>
                 <button class="toggle" data-toggle="collapse"
                         data-target="#eventContentSix" aria-expanded="true"
                         aria-controls="eventContentSix"> Подробнее
@@ -332,7 +333,7 @@
             <li class="accordion-item">
               <div class="acc-banner" id="eventHeadSeven">
                 <span> Банк и деньги (часть 1)</span><span
-                class="data">12 января</span><span>11:00</span>
+                class="data">12 января</span><span class="time">11:00</span>
                 <button class="toggle" data-toggle="collapse"
                         data-target="#eventContentSeven" aria-expanded="true"
                         aria-controls="eventContentSeven"> Подробнее
@@ -376,7 +377,7 @@
             <li class="accordion-item">
               <div class="acc-banner" id="eventHeadTree">
                 <span> Банк и деньги (часть 1)</span><span
-                class="data">12 января</span><span>11:00</span>
+                class="data">12 января</span><span class="time">11:00</span>
                 <button class="toggle" data-toggle="collapse"
                         data-target="#eventContentEight" aria-expanded="true"
                         aria-controls="eventContentEight"> Подробнее
@@ -420,7 +421,7 @@
             <li class="accordion-item">
               <div class="acc-banner" id="eventHeadNine">
                 <span> Банк и деньги (часть 1)</span><span
-                class="data">12 января</span><span>11:00</span>
+                class="data">12 января</span><span class="time">11:00</span>
                 <button class="toggle" data-toggle="collapse"
                         data-target="#eventContentNine" aria-expanded="true"
                         aria-controls="eventContentNine"> Подробнее
@@ -464,7 +465,7 @@
             <li class="accordion-item">
               <div class="acc-banner" id="eventHeadTen">
                 <span> Банк и деньги (часть 1)</span><span
-                class="data">12 января</span><span>11:00</span>
+                class="data">12 января</span><span class="time">11:00</span>
                 <button class="toggle" data-toggle="collapse"
                         data-target="#eventContentTen" aria-expanded="true"
                         aria-controls="eventContentTen"> Подробнее
@@ -551,13 +552,13 @@
           </div>
           <div class="soc-icons">
             <div class="icon 1">
-              <img src="./images/fb-icon.png" alt="fb">
+              <a href="https://www.facebook.com/MI.ryadom.rb/"><img src="./images/fb-icon.png" alt="fb"></a>
             </div>
             <div class="icon 2">
-              <img src="./images/inst-icon.png" alt="instagram">
+              <a href="https://www.instagram.com/mi.ryadom/"><img src="./images/inst-icon.png" alt="instagram"></a>
             </div>
             <div class="icon 3">
-              <img src="./images/yt-icon.png" alt="youtube">
+              <a href="https://www.youtube.com/channel/UC9XZbqOT_o0seNx7L_zas7g"><img src="./images/yt-icon.png" alt="youtube"></a>
             </div>
           </div>
         </div>
