--- a/src/firstmodal.html
+++ b/src/firstmodal.html
@@ -10,7 +10,7 @@
 <body>
     <section class="wrapper-header">
         <header>
-            <div class="container flat-menu">
+            <div class="container_flat-menu">
                 <div class="first-logo">
                     <img src="./images/logo-2.png" alt="Logo">
                 </div>
