--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-  <title>The step</title>
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+  <title>Шаг вперед</title>
 </head>
 
 <body>
 <!-- шапка+навигационное меню -->
 <section class="wrapper-header">
   <header>
-    <div class="container flat-menu">
+    <div class="container_flat-menu">
       <div class="first-logo">
         <img src="./images/logo-2.png" alt="Logo">
       </div>
@@ -91,17 +91,17 @@
         </p>
       </div>
       <div class="base-button">
-        <button id=#><a href="about.html"><p>Узнать больше</p></a></button>
+         <button onclick="window.location.href='about.html';">Узнать больше</button>
       </div>
       <div class="social-icons">
         <div class="social-icon">
-          <a href="#"><img src="./images/fb-icon.png" alt="fb"></a>
+          <a href="https://www.facebook.com/MI.ryadom.rb/"><img src="./images/fb-icon.png" alt="fb"></a>
         </div>
         <div class="social-icon">
-          <a href="#"><img src="./images/inst-icon.png" alt="instagram"></a>
+          <a href="https://www.instagram.com/mi.ryadom/"><img src="./images/inst-icon.png" alt="instagram"></a>
         </div>
         <div class="social-icon">
-          <a href="#"><img src="./images/yt-icon.png" alt="youtube"></a>
+          <a href="https://www.youtube.com/channel/UC9XZbqOT_o0seNx7L_zas7g"><img src="./images/yt-icon.png" alt="youtube"></a>
         </div>
 
       </div>
@@ -369,10 +369,6 @@
       </div>
     </div>
   </div>
-  <!--</div>-->
-  <!-- <svg class="team-background" viewBox="0 0 1280 784" fill="none" xmlns="http://www.w3.org/2000/svg">
-    <path d="M651 253.472C875.065 -81.3359 1331 11.9435 1331 11.9435V784H-31C-31 784 426.935 588.28 651 253.472Z" fill="#FF8DA9"/>
-    </svg> -->
 
 </section>
 <!-- мероприятия  -->
@@ -387,7 +383,7 @@
         <div class="acc-banner" id="headOne">
           <span> Банк и деньги (часть 1)</span>
           <span class="data">12 января</span>
-          <span>11:00</span>
+          <span class="time">11:00</span>
           <button class="toggle" data-toggle="collapse"
                   data-target="#contentOne" aria-expanded="true"
                   aria-controls="contentOne">
@@ -433,7 +429,7 @@
       <li class="accordion-item">
        <div class="acc-banner" id="headTwo">
          <span> Банк и деньги (часть 1)</span><span
-         class="data">12 января</span><span>11:00</span>
+         class="data">12 января</span><span class="time">11:00</span>
          <button class="toggle" data-toggle="collapse"
                  data-target="#contentTwo" aria-expanded="true"
                  aria-controls="contentTwo"> Подробнее
@@ -477,7 +473,7 @@
       <li class="accordion-item">
        <div class="acc-banner" id="headTree">
          <span> Банк и деньги (часть 1)</span><span
-         class="data">12 января</span><span>11:00</span>
+         class="data">12 января</span><span class="time">11:00</span>
          <button class="toggle" data-toggle="collapse"
                  data-target="#contentThree" aria-expanded="true"
                  aria-controls="contentThree"> Подробнее
@@ -541,7 +537,7 @@
           <img src="./images/logo-instagram.png" alt="logo">
         </div>
         <div class="text-content">
-          <h4>mi.ryadom &bull; <a href="https://www.instagram.com/mi.ryadom">Подписаться</a>
+          <h4>mi.ryadom &bull; <a href="https://www.instagram.com/mi.ryadom/">Подписаться</a>
           </h4>
           <p>Первый образовательный <br>
             проект "Шаг вперёд". Что <br>
@@ -549,7 +545,7 @@
         </div>
       </div>
       <div class="btn-details">
-        <button>Подробнее</button>
+        <button onclick="window.location.href='https://www.instagram.com/mi.ryadom/';">Подробнее</button>
       </div>
     </div>
     <div class="instagram-2">
@@ -561,7 +557,7 @@
           <img src="./images/logo-instagram.png" alt="logo">
         </div>
         <div class="text-content">
-          <h4>mi.ryadom &bull; <a href="https://www.instagram.com/mi.ryadom">Подписаться</a>
+          <h4>mi.ryadom &bull; <a href="https://www.instagram.com/mi.ryadom/">Подписаться</a>
           </h4>
           <p>Первый образовательный <br>
             проект "Шаг вперёд". Что <br>
@@ -569,7 +565,7 @@
         </div>
       </div>
       <div class="btn-details">
-        <button>Подробнее</button>
+        <button onclick="window.location.href='https://www.instagram.com/mi.ryadom/';">Подробнее</button>
       </div>
     </div>
     <div class="instagram-3">
@@ -581,7 +577,7 @@
           <img src="./images/logo-instagram.png" alt="logo">
         </div>
         <div class="text-content">
-          <h4>mi.ryadom &bull; <a href="https://www.instagram.com/mi.ryadom">Подписаться</a>
+          <h4>mi.ryadom &bull; <a href="https://www.instagram.com/mi.ryadom/">Подписаться</a>
           </h4>
           <p>Первый образовательный <br>
             проект "Шаг вперёд". Что <br>
@@ -589,7 +585,7 @@
         </div>
       </div>
       <div class="btn-details">
-        <button>Подробнее</button>
+        <button onclick="window.location.href='https://www.instagram.com/mi.ryadom/';">Подробнее</button>
       </div>
     </div>
   </div>
@@ -654,7 +650,7 @@
   </div> -->
 
   <div class="all-news">
-    <a href="#">Все новости</a>
+    <a href="https://www.instagram.com/mi.ryadom/">Все новости</a>
   </div>
 
 
@@ -705,13 +701,13 @@
     </div>
     <div class="soc-icons">
       <div class="icon 1">
-        <a href="#"><img src="./images/fb-icon.png" alt="fb"></a>
+        <a href="https://www.facebook.com/MI.ryadom.rb/"><img src="./images/fb-icon.png" alt="fb"></a>
       </div>
       <div class="icon 2">
-        <a href="#"><img src="./images/inst-icon.png" alt="instagram"></a>
+        <a href="https://www.instagram.com/mi.ryadom/"><img src="./images/inst-icon.png" alt="instagram"></a>
       </div>
       <div class="icon 3">
-        <a href="#"><img src="./images/yt-icon.png" alt="youtube"></a>
+        <a href="https://www.youtube.com/channel/UC9XZbqOT_o0seNx7L_zas7g"><img src="./images/yt-icon.png" alt="youtube"></a>
       </div>
     </div>
   </div>
