--- a/src/about.html
+++ b/src/about.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+    <title>Шаг вперед</title>
 </head>
 <body>
     <header>
-        <div class="container flat-menu">
+        <div class="container_flat-menu">
             <div class="first-logo">
                 <img src="./images/logo-2.png" alt="Logo">
             </div>
@@ -330,13 +331,13 @@
           </div>
           <div class="soc-icons">
             <div class="icon 1">
-              <img src="./images/fb-icon.png" alt="fb">
+              <a href="https://www.facebook.com/MI.ryadom.rb/"><img src="./images/fb-icon.png" alt="fb"></a>
             </div>
             <div class="icon 2">
-              <img src="./images/inst-icon.png" alt="instagram">
+              <a href="https://www.instagram.com/mi.ryadom/"><img src="./images/inst-icon.png" alt="instagram"></a>
             </div>
             <div class="icon 3">
-              <img src="./images/yt-icon.png" alt="youtube">
+              <a href="https://www.youtube.com/channel/UC9XZbqOT_o0seNx7L_zas7g"><img src="./images/yt-icon.png" alt="youtube"></a>
             </div>
           </div>
         </div>
